Fixes and changes
